--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4030620241128001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4030620241128001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4030620241128001",
+    "@dcloudio/uni-ui": "^1.5.7",
+    "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
   },
@@ -59,9 +62,11 @@
     "@dcloudio/uni-cli-shared": "3.0.0-4030620241128001",
     "@dcloudio/uni-stacktracey": "3.0.0-4030620241128001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4030620241128001",
-    "@vue/tsconfig": "^0.1.3",
+    "@uni-helper/uni-app-types": "1.0.0-alpha.6",
     "@vue/runtime-core": "^3.4.21",
-    "typescript": "^4.9.4",
+    "@vue/tsconfig": "^0.1.3",
+    "miniprogram-api-typings": "^4.0.5",
+    "typescript": "^4.9.5",
     "vite": "5.2.8",
     "vue-tsc": "^1.0.24"
   }
