--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "",
-    "appid" : "",
+    "appid" : "wx8b6ad975daf37a5e",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
