--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
       "@/*": ["./src/*"]
     },
     "lib": ["esnext", "dom"],
-    "types": ["@dcloudio/types"]
+    "types": ["@dcloudio/types","miniprogram-api-typings","@uni-helper/uni-app-types"],
+    "ignoreDeprecations":"5.0"
+  },
+  "vueCompilerOptions": {
+  "nativeTags": ["block", "component", "template", "slot"], 
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
