--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-4030620241128001",
     "@dcloudio/uni-ui": "^1.5.7",
     "pinia": "^3.0.1",
-    "pinia-plugin-persistedstate": "^4.2.0",
+    "pinia-plugin-persistedstate": "^3.2.0",
+    "sass": "^1.85.0",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
   },
