--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@dcloudio/uni-ui": "^1.5.7",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^3.2.0",
-    "sass": "^1.85.0",
+    "sass": "1.85.1",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
   },
