--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "build:quickapp-webview": "uni build -p quickapp-webview",
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "start": "node scripts/check-node.js"
   },
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-4030620241128001",
